---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo_1() {\n  todo\n}\n\nfn foo_2() {\n  todo \"my custom message\"\n}\n\nfn foo_3() {\n  when x is {\n    Foo -> True\n    _ -> error\n  }\n}\n\nfn foo_4() {\n  if 14 == 42 {\n    error \"I don't think so\"\n  } else {\n    trace \"been there\"\n    True\n  }\n}\n"
---
fn foo_1() {
  todo
}

fn foo_2() {
  todo @"my custom message"
}

fn foo_3() {
  when x is {
    Foo -> True
    _ -> error
  }
}

fn foo_4() {
  if 14 == 42 {
    error @"I don't think so"
  } else {
    trace @"been there"
    True
  }
}

